fix: update docker-compose to docker compose v2 command
- Update GitHub Actions workflow to use 'docker compose' instead of 'docker-compose'
- Update all Makefile commands to use Docker Compose v2 syntax
- Update usage examples in docker-compose.ci.yml and docker-compose.test.yml comments
- Fixes command not found error in GitHub Actions (exit code 127)
- Maintains compatibility with Docker Compose v2.39.4+ installed on runner

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: Build and run tests
         run: |
-          docker-compose -f docker-compose.ci.yml up \
+          docker compose -f docker-compose.ci.yml up \
             --build \
             --abort-on-container-exit \
             --exit-code-from app
@@ -56,7 +56,7 @@ jobs:
 
       - name: Cleanup
         if: always()
-        run: docker-compose -f docker-compose.ci.yml down -v
+        run: docker compose -f docker-compose.ci.yml down -v
 
   lint:
     name: Code Quality
