--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -10,9 +10,9 @@ name: dashtam-test
 # - Test database with test user
 #
 # Usage:
-#   docker-compose -f docker-compose.test.yml --env-file .env.test up -d
-#   docker-compose -f docker-compose.test.yml exec app pytest
-#   docker-compose -f docker-compose.test.yml down
+#   docker compose -f docker-compose.test.yml --env-file .env.test up -d
+#   docker compose -f docker-compose.test.yml exec app pytest
+#   docker compose -f docker-compose.test.yml down
 
 services:
   # PostgreSQL Database (Testing) - Ephemeral storage
@@ -93,7 +93,7 @@ services:
     command: >
       sh -c "
         echo 'Test environment ready. Database and Redis are available.' &&
-        echo 'Run tests with: docker-compose -f docker-compose.test.yml exec app pytest' &&
+        echo 'Run tests with: docker compose -f docker-compose.test.yml exec app pytest' &&
         tail -f /dev/null
       "
 
