test: improve test infrastructure and add comprehensive test suite
- Update pytest.ini with better test organization and markers
- Refactor conftest.py for synchronous testing approach
- Add 39 comprehensive tests (unit, integration, API)
- Add test utilities and helpers
- Implement proper test isolation and cleanup
- Add fixtures for database, users, providers
- Ensure all tests pass with production test database

Test coverage now includes:
- Unit tests: encryption, database, config services
- Integration tests: CRUD operations, provider workflows
- API tests: endpoint validation, error handling

--- a/pytest.ini
+++ b/pytest.ini
@@ -6,28 +6,22 @@ python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
 
-# Pytest-asyncio configuration
-# Use 'auto' mode to automatically handle async fixtures and tests
-asyncio_mode = auto
-asyncio_default_fixture_loop_scope = session
-
 # Output options
 addopts = 
     --strict-markers
     --tb=short
-    --disable-warnings
     -v
+    --color=yes
 
 # Test paths
 testpaths = tests
 
-# Markers
+# Markers (defined in conftest.py via pytest_configure)
 markers =
-    unit: Unit tests
-    integration: Integration tests
-    e2e: End-to-end tests
+    unit: Unit tests (fast, no database)
+    integration: Integration tests (with database)
+    api: API/E2E tests
     slow: Slow-running tests
-    database: Tests requiring database
 
 # Logging
 log_cli = false
@@ -37,3 +31,6 @@ log_cli_date_format = %Y-%m-%d %H:%M:%S
 
 # Minimum version
 minversion = 7.0
+
+# Python path
+pythonpath = .
