fix: resolve CI linting failures and pytest marker issue
- Remove unused import 'pytest' from test_provider_endpoints.py
- Remove unused import 'Any' from conftest.py
- Remove unused imports 'AsyncConnection' and 'event' from conftest_async_old.py
- Add 'database' marker to pytest.ini to fix test collection error
- Fix Makefile git-pr heredoc syntax issue

Verified fixes:
✅ Linting passes (ruff check)
✅ Test collection works (no marker errors)
✅ Makefile syntax correct

Fixes CI Code Quality and test collection failures.

--- a/pytest.ini
+++ b/pytest.ini
@@ -21,6 +21,7 @@ markers =
     unit: Unit tests (fast, no database)
     integration: Integration tests (with database)
     api: API/E2E tests
+    database: Database-specific tests
     slow: Slow-running tests
 
 # Logging
