fix: Add missing callback service and environment variables to CI configuration
- Added callback service to docker-compose.ci.yml for OAuth test support
- Added missing API_BASE_URL and CALLBACK_BASE_URL environment variables
- Updated .env.ci.example with missing URL configurations
- Changed CI LOG_LEVEL from WARNING to INFO for better debugging

This fixes the discrepancy between local test environment (passing) and CI environment (failing)

--- a/.env.ci.example
+++ b/.env.ci.example
@@ -9,6 +9,10 @@ ENVIRONMENT=testing
 DEBUG=false
 LOG_LEVEL=WARNING
 
+# Application URLs (internal Docker network communication)
+API_BASE_URL=http://app:8000
+CALLBACK_BASE_URL=http://callback:8182
+
 # Test Database Configuration
 TEST_POSTGRES_DB=dashtam_test
 TEST_POSTGRES_USER=dashtam_test_user
