--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -81,7 +81,10 @@ services:
       SECRET_KEY: ${SECRET_KEY:-ci-test-secret-key-never-use-in-production}
       ENCRYPTION_KEY: ${ENCRYPTION_KEY:-ci-test-encryption-key-32chars}
       ENVIRONMENT: testing
-      LOG_LEVEL: ${LOG_LEVEL:-WARNING}
+      LOG_LEVEL: ${LOG_LEVEL:-INFO}  # Changed to INFO for better debugging
+      # URLs for internal communication
+      API_BASE_URL: http://app:8000  # Added - internal Docker network URL
+      CALLBACK_BASE_URL: http://callback:8182  # Added - callback service URL
       # CI-specific settings
       TESTING: "true"
       CI: "true"
@@ -127,6 +130,30 @@ services:
         echo '✅ All tests passed!'
         echo '=============================================='
         exit 0
+      "
+
+  # OAuth Callback Server (CI) - Required for OAuth tests
+  callback:
+    build:
+      context: .
+      dockerfile: docker/Dockerfile
+      target: callback
+    container_name: dashtam-ci-callback
+    environment:
+      API_BASE_URL: http://app:8000
+      LOG_LEVEL: ${LOG_LEVEL:-INFO}
+    # No port mapping - internal communication only in CI
+    volumes:
+      - ./certs:/app/certs:ro
+    depends_on:
+      - app
+    networks:
+      - dashtam-ci-network
+    # Keep running for OAuth callback handling during tests
+    command: >
+      sh -c "
+        echo 'CI callback server ready for OAuth tests.' &&
+        python src/callback_server.py
       "
 
 networks:
