--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -109,24 +109,18 @@ services:
     # Run tests and exit with proper status code
     command: >
       sh -c "
-        set -e
-        echo '=============================================='
-        echo 'Dashtam CI/CD Test Environment'
-        echo '=============================================='
-        echo ''
-        echo 'Running test suite...'
-        echo ''
-        uv run pytest tests/ \
-          -v \
-          --cov=src \
-          --cov-report=xml \
-          --cov-report=term-missing \
-          --junit-xml=test-results.xml \
-          --maxfail=5 || exit 1
-        echo ''
-        echo '=============================================='
-        echo 'All tests passed!'
-        echo '=============================================='
+        set -e && 
+        echo '=============================================='  && 
+        echo 'Dashtam CI/CD Test Environment' && 
+        echo '=============================================='  && 
+        echo '' && 
+        echo 'Running test suite...' && 
+        echo '' && 
+        uv run pytest tests/ -v --cov=src --cov-report=xml --cov-report=term-missing --junit-xml=test-results.xml --maxfail=5 || exit 1 && 
+        echo '' && 
+        echo '=============================================='  && 
+        echo 'All tests passed!' && 
+        echo '=============================================='  
       "
 
   # OAuth Callback Server (CI) - Required for OAuth tests
