Complete documentation reorganization and Git Flow implementation (#2)
* fix: resolve async fixture issues with pytest-asyncio

Major improvements to test infrastructure:

Changes:
- Import pytest_asyncio for proper async fixture handling
- Mark all async fixtures with @pytest_asyncio.fixture decorator
- Optimize fixture scoping: session for DB setup, function for sessions
- Convert session-scoped async fixtures to sync wrappers using asyncio.run()
- This avoids event loop conflicts with pytest-asyncio

Results:
- Before: 91 failing tests, 56 passing
- After: 50 failing, 54 passing, 44 errors (transaction cleanup issues)
- All async fixture 'coroutine object has no attribute' errors resolved
- Tests now run without greenlet/event loop errors
- Remaining issues are transaction rollback related (to be addressed)

This is Step 3.1 of Phase 3 test fixes - async fixture handling is now correct.

* WIP: Implement proper async testing fixtures per SQLAlchemy/pytest-asyncio best practices

- Created new conftest.py with proper async testing patterns
- Implemented session-scoped engine with NullPool per official docs
- Added pytest.ini with proper async configuration
- Fixed async fixture decorators to use pytest_asyncio
- Changed commit() calls to flush() in test fixtures
- Documented best practices approach in comments

Issue: Still debugging greenlet errors with async connection management.
This is a known complex issue with pytest-asyncio + SQLAlchemy + asyncpg.

Next steps: Need to find the correct async session binding pattern that
avoids greenlet errors while allowing commits in test code.

* docs: reorganize documentation structure

- Move documentation from root to organized docs/ structure
- Relocate files to docs/development/ and docs/research/
- Archive old test configurations for reference
- Remove obsolete markdown files from root directory
- Establish clean documentation hierarchy per WARP.md guidelines

Related to documentation cleanup initiative.

* docs: ad

--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -81,7 +81,10 @@ services:
       SECRET_KEY: ${SECRET_KEY:-ci-test-secret-key-never-use-in-production}
       ENCRYPTION_KEY: ${ENCRYPTION_KEY:-ci-test-encryption-key-32chars}
       ENVIRONMENT: testing
-      LOG_LEVEL: ${LOG_LEVEL:-WARNING}
+      LOG_LEVEL: ${LOG_LEVEL:-INFO}  # Changed to INFO for better debugging
+      # URLs for internal communication
+      API_BASE_URL: http://app:8000  # Added - internal Docker network URL
+      CALLBACK_BASE_URL: http://callback:8182  # Added - callback service URL
       # CI-specific settings
       TESTING: "true"
       CI: "true"
@@ -106,27 +109,44 @@ services:
     # Run tests and exit with proper status code
     command: >
       sh -c "
-        set -e
-        echo '=============================================='
-        echo '🚀 Dashtam CI/CD Test Environment'
-        echo '=============================================='
-        echo ''
-        echo '📊 Initializing test database...'
-        uv run python src/core/init_test_db.py || exit 1
-        echo ''
-        echo '🧪 Running test suite...'
-        uv run pytest tests/ \
-          -v \
-          --cov=src \
-          --cov-report=xml \
-          --cov-report=term-missing \
-          --junit-xml=test-results.xml \
-          --maxfail=5 || exit 1
-        echo ''
-        echo '=============================================='
-        echo '✅ All tests passed!'
-        echo '=============================================='
-        exit 0
+        set -e && 
+        echo '=============================================='  && 
+        echo 'Dashtam CI/CD Test Environment' && 
+        echo '=============================================='  && 
+        echo '' && 
+        echo 'Running test suite...' && 
+        echo '' && 
+        uv run pytest tests/ -v --cov=src --cov-report=xml --cov-report=term-missing --junit-xml=test-results.xml --maxfail=5 || exit 1 && 
+        echo '' && 
+        echo '=============================================='  && 
+        echo 'All tests passed!' && 
+        echo '=============================================='  
+      "
+
+  # OAuth Callback Server (CI) - Required for OAuth tests
+  callback:
+    build:
+      context: .
+      dockerfile: docker/Dockerfile
+      target: callback
+    container_name: dashtam-ci-callback
+    environment:
+      API_BASE_URL: http://app:8000
+      LOG_LEVEL: ${LOG_LEVEL:-INFO}
+    # No port mapping - internal communication only in CI
+    volumes:
+      - ./certs:/app/certs:ro
+    depends_on:
+      - app
+    networks:
+      - dashtam-ci-network
+    # Keep running for OAuth callback handling during tests
+    # Note: In test environment, we just keep the container alive
+    # The actual callback handling is done through the app's routing
+    command: >
+      sh -c "
+        echo 'CI callback server ready for OAuth tests.' &&
+        tail -f /dev/null
       "
 
 networks:
