feat: Phase 2 - JWT Authentication Core Services Implementation
Implemented comprehensive JWT-based authentication services including password
hashing, JWT token management, email notifications, and complete auth flow.

Services Implemented:
- PasswordService: bcrypt-based password hashing with Python 3.13 compatibility
  * Replaced passlib with direct bcrypt for better py3.13 support
  * 72-byte limitation properly handled
  * Password strength validation
  * Random password generation
  * Hash rehashing detection

- JWTService: Complete JWT token lifecycle management
  * Access token creation (30 min expiry)
  * Refresh token creation (30 day expiry)
  * Token decoding and verification
  * Token type validation
  * User ID and JTI extraction
  * Expiration checking

- EmailService: AWS SES integration with templates
  * Development mode (logging only)
  * Production mode (actual email sending)
  * Email verification templates
  * Password reset templates
  * Welcome email templates
  * Password changed notifications

- AuthService: Complete authentication flow
  * User registration with email verification
  * Email verification handling
  * Login with JWT token generation
  * Token refresh with rotation support
  * Logout functionality
  * Password reset flow
  * User management operations

Configuration Updates:
- Added BCRYPT_ROUNDS configuration (default: 12)
- Added AWS SES configuration (region, credentials)
- Added email sender configuration
- Added token expiration settings
- Updated all environment example files

Documentation:
- Added async-vs-sync-patterns.md architecture guide
- Added uv-package-management.md guide
- Updated WARP.md with Phase 2 completion status

Testing:
- 58 new unit tests added (17 + 21 + 20)
- All 236 tests passing (60 API + 60 integration + 176 unit)
- Password service: 95% coverage
- JWT service: 89% coverage
- Email service: 95% coverage
- Overall project coverage: 67%

Code Quality:
- All code linted and formatted (ruff)
- Comp

--- a/.env.ci.example
+++ b/.env.ci.example
@@ -28,6 +28,20 @@ ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 REFRESH_TOKEN_EXPIRE_DAYS=30
 
+# Password Hashing Configuration
+# Use lower rounds in CI for faster test execution
+BCRYPT_ROUNDS=10
+
+# Email Configuration (AWS SES) - Mocked in CI
+# Email sending is completely mocked in CI environment
+AWS_REGION=us-east-1
+AWS_ACCESS_KEY_ID=ci-mock-aws-access-key
+AWS_SECRET_ACCESS_KEY=ci-mock-aws-secret-key
+SES_FROM_EMAIL=ci-test@dashtam.com
+SES_FROM_NAME=Dashtam CI
+EMAIL_VERIFICATION_TOKEN_EXPIRE_HOURS=24
+PASSWORD_RESET_TOKEN_EXPIRE_HOURS=1
+
 # CI-specific flags
 TESTING=true
 CI=true
