--- a/.env.example
+++ b/.env.example
@@ -27,6 +27,21 @@ ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 REFRESH_TOKEN_EXPIRE_DAYS=30
 
+# Password Hashing Configuration
+# Bcrypt rounds: 10-14 recommended (higher = slower but more secure)
+# 12 rounds = ~300ms hashing time (good balance)
+BCRYPT_ROUNDS=12
+
+# Email Configuration (AWS SES)
+# Required for user email verification and password reset flows
+AWS_REGION=us-east-1
+# AWS_ACCESS_KEY_ID=your-aws-access-key-id
+# AWS_SECRET_ACCESS_KEY=your-aws-secret-access-key
+SES_FROM_EMAIL=noreply@dashtam.com
+SES_FROM_NAME=Dashtam
+EMAIL_VERIFICATION_TOKEN_EXPIRE_HOURS=24
+PASSWORD_RESET_TOKEN_EXPIRE_HOURS=1
+
 # API Configuration
 API_V1_PREFIX=/api/v1
 API_BASE_URL=https://localhost:8000
