--- a/.env.test.example
+++ b/.env.test.example
@@ -30,6 +30,20 @@ ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 REFRESH_TOKEN_EXPIRE_DAYS=30
 
+# Password Hashing Configuration
+# Use lower rounds in tests for faster execution
+BCRYPT_ROUNDS=10
+
+# Email Configuration (AWS SES) - Mocked in tests
+# Email sending is mocked/disabled during testing
+AWS_REGION=us-east-1
+AWS_ACCESS_KEY_ID=test-aws-access-key-id
+AWS_SECRET_ACCESS_KEY=test-aws-secret-access-key
+SES_FROM_EMAIL=test@dashtam.com
+SES_FROM_NAME=Dashtam Test
+EMAIL_VERIFICATION_TOKEN_EXPIRE_HOURS=24
+PASSWORD_RESET_TOKEN_EXPIRE_HOURS=1
+
 # CORS Configuration (relaxed for testing)
 CORS_ORIGINS=http://localhost:3000,http://localhost:8001,http://test
 
