feat: JWT User Authentication System (Phase 3 Complete) (#9)
* feat(auth): add JWT authentication database schema and models (Phase 1)

- Add boto3 dependency for AWS SES integration
- Extend User model with 8 authentication fields:
  * password_hash for bcrypt password storage
  * email_verified and email_verified_at for email verification
  * failed_login_attempts and account_locked_until for security
  * last_login_at and last_login_ip for tracking
  * is_active for account management
- Add helper methods: is_locked(), can_login(), reset/increment_failed_login_attempts()
- Create RefreshToken model for JWT refresh token storage with rotation support
- Create EmailVerificationToken model for one-time email verification (24hr expiry)
- Create PasswordResetToken model for one-time password reset (15min expiry)
- Create comprehensive Alembic migration (e18e20278eaa) with all tables and indexes
- Add 65 unit tests for authentication models (19 User tests + 46 token tests)
- Update existing tests for renamed field (last_login → last_login_at)
- All datetime fields use timezone-aware TIMESTAMPTZ
- All tests passing (179 total), coverage increased to 71%

Implementation Plan: docs/development/guides/jwt-auth-implementation-plan.md

* feat: Phase 2 - JWT Authentication Core Services Implementation

Implemented comprehensive JWT-based authentication services including password
hashing, JWT token management, email notifications, and complete auth flow.

Services Implemented:
- PasswordService: bcrypt-based password hashing with Python 3.13 compatibility
  * Replaced passlib with direct bcrypt for better py3.13 support
  * 72-byte limitation properly handled
  * Password strength validation
  * Random password generation
  * Hash rehashing detection

- JWTService: Complete JWT token lifecycle management
  * Access token creation (30 min expiry)
  * Refresh token creation (30 day expiry)
  * Token decoding and verification
  * Token type validation
  * User ID and JTI extract

--- a/requirements.txt
+++ b/requirements.txt
@@ -22,8 +22,12 @@ passlib[bcrypt]
 # Configuration
 python-dotenv
 pydantic-settings
+email-validator
 
 # Utilities
 python-multipart
 python-dateutil
 pytz
+
+# AWS Services
+boto3
