--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,12 +18,9 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Create .env.ci file
-        run: cp .env.ci.example .env.ci
-
       - name: Build and run tests
         run: |
-          docker compose -f docker-compose.ci.yml up \
+          docker compose -f compose/docker-compose.ci.yml up \
             --build \
             --abort-on-container-exit \
             --exit-code-from app
@@ -56,7 +53,7 @@ jobs:
 
       - name: Cleanup
         if: always()
-        run: docker compose -f docker-compose.ci.yml down -v
+        run: docker compose -f compose/docker-compose.ci.yml down -v
 
   lint:
     name: Code Quality
