ci: fix lint job to use modern UV sync commands
- Replace 'uv pip install -r requirements-dev.txt' with 'uv sync --frozen'
- Use 'uv run' for ruff commands instead of manual venv activation
- Follows project UV best practices (no requirements.txt files)
- Fixes CI lint failure: File not found: requirements-dev.txt

Related to: #16

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -73,16 +73,12 @@ jobs:
 
       - name: Install dependencies
         run: |
-          uv venv
-          source .venv/bin/activate
-          uv pip install -r requirements-dev.txt
+          uv sync --frozen
 
       - name: Run ruff linter
         run: |
-          source .venv/bin/activate
-          ruff check src/ tests/
+          uv run ruff check src/ tests/
 
       - name: Check code formatting
         run: |
-          source .venv/bin/activate
-          ruff format --check src/ tests/
+          uv run ruff format --check src/ tests/
